--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.0.1",
     "vuetify": "^2.3.19"
   },
